logout and password inputs

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,6 +8,8 @@
 <% if (!signedIn) {%>
 <a href='/register'>Register</a>
 <a href='/login'>Login</a>
-<% }%>
+<% } else {%>
+<a href='/logout'>Logout</a>
+<%}%>
 
 </body>
