--- a/views/login.ejs
+++ b/views/login.ejs
@@ -5,6 +5,6 @@
 <body>
 <form method="POST" action='/login'>
 	<input name='username' />
-	<input name='password' />
+	<input name='password' type='password' />
 	<input name='submit' type='submit'/>
 </form>
