--- a/views/register.ejs
+++ b/views/register.ejs
@@ -5,7 +5,7 @@
 <body>
 	<form method="POST" action='/register'>
 		<input name='username' />
-		<input name='password' />
+		<input name='password' type='password' />
 		<input name='submit' type='submit'/>
 	</form>
 </body>
