changed forms and set port to env variable

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -4,7 +4,7 @@
 
 <body>
 <form method="POST" action='/login'>
-	<input name='username' />
-	<input name='password' type='password' />
+	<input placeholder='Username' name='username' />
+	<input placeholder='Password' name='password' type='password' />
 	<input name='submit' type='submit'/>
 </form>
