--- a/views/register.ejs
+++ b/views/register.ejs
@@ -1,11 +1,11 @@
 <head>
-<title>Login</title>
+<title>Register</title>
 </head>
 
 <body>
 	<form method="POST" action='/register'>
-		<input name='username' />
-		<input name='password' type='password' />
+		<input placeholder='Username' name='username' />
+		<input placeholder='Password' name='password' type='password' />
 		<input name='submit' type='submit'/>
 	</form>
 </body>
