--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -4,4 +4,23 @@
 
 <body>
 	<h1><%= name %></h1>
+	<button id='delete'>Delete</button>
+	<script
+  src="https://code.jquery.com/jquery-3.1.1.min.js"
+  integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
+  crossorigin="anonymous"></script>
+  
+  <script>
+    document.getElementById('delete').addEventListener('click', function(){
+      if(confirm('Are you sure?')){
+        $.ajax({
+          url: '/deleteuser',
+          type: 'DELETE',
+          success: function(result) {
+            window.location = '/';
+          }
+        });
+      }
+    });
+  </script>
 </body>
