--- a/views/login.ejs
+++ b/views/login.ejs
@@ -3,6 +3,9 @@
 </head>
 
 <body>
+<% if (message) { %>
+<p><%= message %></p>
+<% } %>
 <form method="POST" action='/login'>
 	<input placeholder='Username' name='username' />
 	<input placeholder='Password' name='password' type='password' />
